--- a/config.jsonc
+++ b/config.jsonc
@@ -9,12 +9,13 @@
   "modules-center": ["clock", "custom/update", "custom/voxtype", "custom/screenrecording-indicator"],
   "modules-right": [
     "group/tray-expander",
+    "custom/timer",
     "bluetooth",
     "network",
     "pulseaudio",
     "cpu",
     "battery",
-    "custom/nightlight"
+    "custom/nightlight",
   ],  
   "hyprland/workspaces": {
     "on-click": "activate",
@@ -168,5 +169,17 @@
   "return-type": "json",
   "format": "{text}",
   "on-click": "/home/jaidev/.local/bin/hyprsunset-toggle"
+},
+"custom/timer": {
+    "exec": "~/.config/waybar/scripts/timer.sh",
+    "return-type": "json",
+    "format": "{}",
+    "on-click": "~/.config/waybar/scripts/timer.sh click",
+    "on-click-right": "~/.config/waybar/scripts/timer.sh right",
+    "on-click-middle": "~/.config/waybar/scripts/timer.sh middle",
+    "on-scroll-up": "~/.config/waybar/scripts/timer.sh down",
+    "on-scroll-down": "~/.config/waybar/scripts/timer.sh up",
+    "tooltip": true,
+    "escape": true
 }
 }
