--- a/config.jsonc
+++ b/config.jsonc
@@ -1,14 +1,22 @@
-
 {
   "reload_style_on_change": true,
   "layer": "top",
   "position": "top",
   "spacing": 0,
   "height": 26,
-  "modules-left": ["custom/omarchy", "hyprland/workspaces"],
-  "modules-center": ["clock", "custom/update", "custom/voxtype", "custom/screenrecording-indicator"],
+  "modules-left": [
+    "custom/omarchy",
+    "hyprland/workspaces"
+  ],
+  "modules-center": [
+    "clock",
+    "custom/update",
+    "custom/voxtype",
+    "custom/screenrecording-indicator"
+  ],
   "modules-right": [
     // "group/tray-expander",
+    "custom/todo",
     "custom/timer",
     "bluetooth",
     "network",
@@ -16,7 +24,7 @@
     "cpu",
     "battery",
     "custom/nightlight",
-  ],  
+  ],
   "hyprland/workspaces": {
     "on-click": "activate",
     "format": "{icon}",
@@ -56,7 +64,6 @@
     "signal": 7,
     "interval": 21600
   },
-
   "cpu": {
     "interval": 5,
     "format": "{usage}%",
@@ -70,7 +77,13 @@
     "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select"
   },
   "network": {
-    "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
+    "format-icons": [
+      "󰤯",
+      "󰤟",
+      "󰤢",
+      "󰤥",
+      "󰤨"
+    ],
     "format": "{icon}",
     "format-wifi": "{icon}",
     "format-ethernet": "󰀂",
@@ -88,8 +101,30 @@
     "format-charging": "{icon}",
     "format-plugged": "",
     "format-icons": {
-      "charging": ["󰢜", "󰂆", "󰂇", "󰂈", "󰢝", "󰂉", "󰢞", "󰂊", "󰂋", "󰂅"],
-      "default": ["󰁺", "󰁻", "󰁼", "󰁽", "󰁾", "󰁿", "󰂀", "󰂁", "󰂂", "󰁹"]
+      "charging": [
+        "󰢜",
+        "󰂆",
+        "󰂇",
+        "󰂈",
+        "󰢝",
+        "󰂉",
+        "󰢞",
+        "󰂊",
+        "󰂋",
+        "󰂅"
+      ],
+      "default": [
+        "󰁺",
+        "󰁻",
+        "󰁼",
+        "󰁽",
+        "󰁾",
+        "󰁿",
+        "󰂀",
+        "󰂁",
+        "󰂂",
+        "󰁹"
+      ]
     },
     "format-full": "󰂅",
     "tooltip-format-discharging": "{power:>1.0f}W↓ {capacity}%",
@@ -119,7 +154,11 @@
     "format-muted": "",
     "format-icons": {
       "headphone": "",
-      "default": ["", "", ""]
+      "default": [
+        "",
+        "",
+        ""
+      ]
     }
   },
   "group/tray-expander": {
@@ -128,7 +167,10 @@
       "transition-duration": 600,
       "children-class": "tray-group-item"
     },
-    "modules": ["custom/expand-icon", "tray"]
+    "modules": [
+      "custom/expand-icon",
+      "tray"
+    ]
   },
   "custom/expand-icon": {
     "format": "",
@@ -157,20 +199,18 @@
     "on-click-right": "omarchy-voxtype-config",
     "on-click": "omarchy-voxtype-model"
   },
-  
   "tray": {
     "icon-size": 12,
     "spacing": 17
   },
-
-"custom/nightlight": {
-  "exec": "sh -c 'pgrep -x hyprsunset >/dev/null && echo \"{\\\"text\\\":\\\"󰖔\\\"}\" || echo \"{\\\"text\\\":\\\"󰖙\\\"}\"'",
-  "restart-interval": 1,
-  "return-type": "json",
-  "format": "{text}",
-  "on-click": "/home/jaidev/.local/bin/hyprsunset-toggle"
-},
-"custom/timer": {
+  "custom/nightlight": {
+    "exec": "sh -c 'pgrep -x hyprsunset >/dev/null && echo \"{\\\"text\\\":\\\"󰖔\\\"}\" || echo \"{\\\"text\\\":\\\"󰖙\\\"}\"'",
+    "restart-interval": 1,
+    "return-type": "json",
+    "format": "{text}",
+    "on-click": "/home/jaidev/.local/bin/hyprsunset-toggle"
+  },
+  "custom/timer": {
     "exec": "~/.config/waybar/scripts/timer.sh",
     "return-type": "json",
     "format": "{}",
@@ -181,5 +221,15 @@
     "on-scroll-down": "~/.config/waybar/scripts/timer.sh up",
     "tooltip": true,
     "escape": true
-}
+  },
+  "custom/todo": {
+    "exec": "$HOME/.config/waybar/todo-scripts/todo.py",
+    "return-type": "json",
+    "interval": 20,
+    "signal": 13,
+    "on-click": "$HOME/.config/waybar/todo-scripts/todo.py toggle-current --signal 13",
+    "on-click-right": "hyprctl dispatch exec \"[float;size 60% 60%;center] xdg-terminal-exec $HOME/.config/waybar/todo-scripts/todo.py tui --signal 13\"",
+    "on-click-middle": "$HOME/.config/waybar/todo-scripts/todo.py reset --signal 13",
+    "tooltip": true
+  },
 }
